--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -50,7 +50,8 @@
           run: mkdir -p ./publish  
         
         - name: make releases
-          run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r ${{ matrix.os }} --output ./publish/${{ matrix.os }}
+          run: dotnet publish -c Release -r ${{ matrix.os }} --self-contained --output ./publish/${{ matrix.os }}
+
         
         - name: Zip the published files
           run: zip -r ./publish/${{ matrix.os }} ./publish/${{ matrix.os }}
