--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -50,8 +50,7 @@
           run: mkdir -p ./publish  
         
         - name: make releases
-          run: dotnet publish -c Release -r ${{ matrix.os }} --self-contained true /p:PublishSingleFile=true --output ./publish/${{ matrix.os }}
-
+          run: dotnet publish -c Release -r ${{ matrix.os }} --self-contained /p:PublishSingleFile=true --output ./publish/${{ matrix.os }}
         
         - name: Zip the published files
           run: zip -r ./publish/${{ matrix.os }} ./publish/${{ matrix.os }}
