patch auto deployment for azure

--- a/.github/workflows/main_bdsagroup013chirprazor.yml
+++ b/.github/workflows/main_bdsagroup013chirprazor.yml
@@ -4,9 +4,10 @@
 name: Build and deploy ASP.Net Core app to Azure Web App - bdsagroup013chirprazor
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Bump Version and Create Release"]  # The name of the workflow you want to depend on
+    types:
+      - completed  # Triggers this workflow when the specified workflow is completed
   workflow_dispatch:
 
 jobs:
