--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -50,13 +50,24 @@
       steps:
         - name: Checkout repository
           uses: actions/checkout@v3
+          with:
+            fetch-depth: 0  # Ensure all tags are fetched
+
+        # Get the version from Git tags, strip the 'v' prefix
+        - name: Get version from Git tags
+          id: get_version
+          run: |
+            VERSION=$(git describe --tags --abbrev=0)
+            VERSION_NO_V=$(echo $VERSION | sed 's/^v//')  # Remove the 'v' prefix
+            echo "version=$VERSION" >> $GITHUB_ENV
+            echo "version_no_v=$VERSION_NO_V" >> $GITHUB_ENV
 
         - name: makedir
-          run: mkdir -p . 
-        
+          run: mkdir -p .
+
         - name: make releases
           run: dotnet publish -c Release -r ${{ matrix.os }} --self-contained --output ./${{ matrix.os }}
-        
+
         - name: Zip the published files
           run: zip -r ./${{ matrix.os }} ./${{ matrix.os }}
 
@@ -66,17 +77,9 @@
             name: ${{ matrix.os }}
             path: ./${{ matrix.os }}.zip
 
-        - name: Download Release Artifact
-          uses: actions/download-artifact@v3
-          with: 
-            name: ${{ matrix.os }}
-        
-        
-        
+        # Now, when releasing, use the `version` with the `v` prefix.
         - name: Release with tag
           uses: softprops/action-gh-release@v1
           with:
-            files: |
-              ./${{ matrix.os }}.zip
-
-      
+            tag_name: "${{ env.version }}"   # Pass the tag with 'v' prefix
+            files: ./${{ matrix.os }}.zip
