--- a/src/Chirp.Services/Chirp.Services.csproj
+++ b/src/Chirp.Services/Chirp.Services.csproj
@@ -6,7 +6,10 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <SelfContained>false</SelfContained>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
-
     
+  <ItemGroup>
+    <ProjectReference Include="../Chirp.Repositories/Chirp.Repositories.csproj" />
+  </ItemGroup>
 </Project>
