--- a/src/Chirp.Web/Chirp.Web.csproj
+++ b/src/Chirp.Web/Chirp.Web.csproj
@@ -8,5 +8,10 @@
     <SelfContained>false</SelfContained>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="../Chirp.Services/Chirp.Services.csproj" />
+    <ProjectReference Include="../Chirp.Repositories/Chirp.Repositories.csproj" />
+  </ItemGroup>
     
 </Project>
