--- a/src/Chirp.Web/Chirp.Web.csproj
+++ b/src/Chirp.Web/Chirp.Web.csproj
@@ -8,8 +8,12 @@
     <SelfContained>false</SelfContained>
   </PropertyGroup>
 
+ <ItemGroup>
+    <None Update="..\..\data\**\*">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </None>
 
-  <ItemGroup>
     <ProjectReference Include="../Chirp.Services/Chirp.Services.csproj" />
     <ProjectReference Include="../Chirp.Repositories/Chirp.Repositories.csproj" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
