--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -18,8 +18,14 @@
   jobs:
     build:
       runs-on: ubuntu-latest
-
+      if: ${{ always() }}
+      
       steps:
+        - name: Disable GitHub Actions email notifications
+          run: echo "No notifications"
+          env:
+            CI: true
+
         - name: Checkout repository
           uses: actions/checkout@v4
 
