--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,8 +9,15 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    if: ${{ always() }}
+      
 
     steps:
+      - name: Disable GitHub Actions email notifications
+        run: echo "No notifications"
+        env:
+          CI: true
+
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
