--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -16,3 +16,6 @@ csharp_style_unused_value_expression_statement_preference = unused_local_variabl
 
 # CA1305: Specify IFormatProvider
 dotnet_diagnostic.CA1305.severity = none
+
+# CS8604: Possible null reference argument.
+dotnet_diagnostic.CS8604.severity = warning
