Removing redundant repository folder for testing

--- a/test/Infrastructure/Repositories/Repositories.csproj
+++ b/test/Infrastructure/Repositories/Repositories.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\Chirp.Infrastructure\Chirp.Repositories\Chirp.Repositories.csproj" />
+    <ProjectReference Include="..\..\..\src\Chirp.Infrastructure\Chirp.Repositories\Chirp.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
