--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,16 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "Generate coverage stats",
+            "command": "reportgenerator",
+            "type": "shell",
+            "args": [
+                "-reports:${workspaceFolder}/YourUnitTestProjectFolder/lcov.info",
+                "-targetdir:${workspaceFolder}/YourUnitTestProjectFolder/covstats"
+            ],
+            "problemMatcher": []
+        },
+        {
             "label": "build",
             "command": "dotnet",
             "type": "process",
