--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,8 +6,8 @@
             "command": "reportgenerator",
             "type": "shell",
             "args": [
-                "-reports:${workspaceFolder}/YourUnitTestProjectFolder/lcov.info",
-                "-targetdir:${workspaceFolder}/YourUnitTestProjectFolder/covstats"
+                "-reports:${workspaceFolder}/test/lcov.info",
+                "-targetdir:${workspaceFolder}/test/covstats"
             ],
             "problemMatcher": []
         },
