second commit because other things didn't get commited

--- a/src/Chirp.Infrastructure/Chirp.Repositories/Chirp.Repositories.csproj
+++ b/src/Chirp.Infrastructure/Chirp.Repositories/Chirp.Repositories.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.0" />
   </ItemGroup>
     
 </Project>
