--- a/test/test.csproj
+++ b/test/test.csproj
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,6 +24,10 @@
   <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
+
+  <ItemGroup>
+  <Compile Include="**\*.cs" Exclude="PlaywrightTests\**\*" />
+</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\src\Chirp.Core\Chirp.Core.csproj" />
