--- a/.github/workflows/main_bdsagroup013chirprazor.yml
+++ b/.github/workflows/main_bdsagroup013chirprazor.yml
@@ -5,16 +5,19 @@ name: Build and deploy ASP.Net Core app to Azure Web App - bdsagroup013chirprazo
 
 on:
   workflow_run:
-      workflows: ["Bump Version and Create Release"]  # The name of the workflow you want to depend on
-      types:
-        - completed  # Triggers this workflow when the specified workflow is completed
+    workflows: ["Bump Version and Create Release"] # The name of the workflow you want to depend on
+    types:
+      - completed # Triggers this workflow when the specified workflow is completed
   workflow_dispatch:
+
+env:
+  ClientID: ${{ secrets.OAUTH_CLIENT_ID }}
+  ClientSecret: ${{ secrets.OAUTH_CLIENT_SECRET }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     if: ${{ always() }}
-      
 
     steps:
       - name: Disable GitHub Actions email notifications
@@ -26,17 +29,17 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.x'
+          dotnet-version: "8.x"
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
-      
+
       - name: Build with dotnet
         run: dotnet build src/Chirp.Web/ --configuration Release
-  
+
       - name: dotnet publish
         run: dotnet publish src/Chirp.Web/ -c Release -o ${{env.DOTNET_ROOT}}/myapp
-        
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -47,7 +50,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -57,7 +60,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -66,10 +69,11 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FD26EA9E0AAB40A89343193883165E31 }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'bdsagroup013chirprazor'
-          slot-name: 'Production'
-          package: .
-          
+  uses: azure/webapps-deploy@v3
+  with:
+    app-name: "bdsagroup013chirprazor"
+    slot-name: "Production"
+    package: .
+    app-settings: |
+      OAUTH_CLIENT_ID=${{ secrets.OAUTH_CLIENT_ID }}
+      OAUTH_CLIENT_SECRET=${{ secrets.OAUTH_CLIENT_SECRET }}
