--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -1,4 +1,4 @@
-  name: Release
+  name: Make dll
 
   on:
     workflow_run:
@@ -41,10 +41,6 @@
         # Build the solution
         - name: Build the solution
           run: dotnet build Chirp.sln --configuration Release --no-restore
-
-        # Run tests
-        - name: Run tests
-          run: dotnet test --configuration Release --verbosity normal
 
     release:
       needs: build
