fixed names for oncompletion jobs

--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -2,7 +2,7 @@
 
   on:
     workflow_run:
-      workflows: ["Bump Version and Create Release"]  # The name of the workflow you want to depend on
+      workflows: ["Create Release"]  # The name of the workflow you want to depend on
       types:
         - completed  # Triggers this workflow when the specified workflow is completed
         
