setting secrets and id's as authentication:github ...

--- a/.github/workflows/main_bdsagroup013chirprazor.yml
+++ b/.github/workflows/main_bdsagroup013chirprazor.yml
@@ -31,6 +31,12 @@ jobs:
         with:
           dotnet-version: "8.x"
 
+      - name: Test
+        run: |
+            export GitHub__ClientId="${{ secrets.OAUTH_CLIENT_ID }}"
+            export GitHub__ClientSecret="${{ secrets.OAUTH_CLIENT_SECRET }}"
+            dotnet test --no-build --verbosity normal
+
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
@@ -45,6 +51,8 @@ jobs:
         with:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
+
+
 
   deploy:
     runs-on: ubuntu-latest
