changed workflow to include correct release workflow

--- a/.github/workflows/main_bdsagroup013chirprazor.yml
+++ b/.github/workflows/main_bdsagroup013chirprazor.yml
@@ -5,7 +5,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - bdsagroup013chirprazo
 
 on:
   workflow_run:
-    workflows: ["Bump Version and Create Release"] # The name of the workflow you want to depend on
+    workflows: ["Create Release"] # The name of the workflow you want to depend on
     types:
       - completed # Triggers this workflow when the specified workflow is completed
   workflow_dispatch:
@@ -29,7 +29,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "8.x"
+          dotnet-version: '8.x'
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
@@ -71,10 +71,17 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FD26EA9E0AAB40A89343193883165E31 }}
 
       - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+          uses: azure/webapps-deploy@v3
+          with:
+            app-name: 'bdsagroup013chirprazor'
+            slot-name: 'Production'
+            package: .
+      
   uses: azure/webapps-deploy@v3
   with:
     app-name: "bdsagroup013chirprazor"
-    slot-name: "Production"
+    slot-name: 'Production'
     package: .
     app-settings: |
       OAUTH_CLIENT_ID=${{ secrets.OAUTH_CLIENT_ID }}
