Added variables into the azure portal, and made sure that it can distinguish between using local secrets and azure secrets.
Co-Authored-By: Símun Larsson Løkke Rasmussen <simra@itu.dk>

--- a/src/Chirp.Web/appsettings.Development.json
+++ b/src/Chirp.Web/appsettings.Development.json
@@ -8,5 +8,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=Chat.db"
+},
+"Secrets":{
+  "clientID": "Ov23liXdZEY87yaZCSlR",
+  "clientSecret": "ddc835be6e70422f6172d53a52d6bd008a210c61"
 }
+
 }
