--- a/src/Chirp.Web/appsettings.json
+++ b/src/Chirp.Web/appsettings.json
@@ -8,6 +8,12 @@
   },
   "ConnectionStrings": {
         "DefaultConnection": "Data Source=Chat.db"
+        
+    },
+    "TestKey": "TestValue",
+    "Secrets":{
+      "clientID": "done goofed",
+      "clientSecret": "haps haps"
     },
   "AllowedHosts": "*"
 }
