--- a/test/test.csproj
+++ b/test/test.csproj
@@ -25,6 +25,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+<ItemGroup>
+  <Compile Include="**\*.cs"/>
+</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\src\Chirp.Core\Chirp.Core.csproj" />
     <ProjectReference Include="..\src\Chirp.Infrastructure\Chirp.Repositories\Chirp.Repositories.csproj" />
