--- a/test/test.csproj
+++ b/test/test.csproj
@@ -6,6 +6,7 @@
     <IsPackable>false</IsPackable>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="coverlet.msbuild" Version="6.0.2">
@@ -14,22 +15,26 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
+
   <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Infrastructure\Repositories\*.cs" />
-    <Compile Include="Infrastructure\Services\*.cs" />
-    <Compile Include="Core\*.cs" />
-  </ItemGroup>
+
+<ItemGroup>
+  <Compile Include="**\*.cs" />
+</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\src\Chirp.Core\Chirp.Core.csproj" />
     <ProjectReference Include="..\src\Chirp.Infrastructure\Chirp.Repositories\Chirp.Repositories.csproj" />
     <ProjectReference Include="..\src\Chirp.Infrastructure\Chirp.Services\Chirp.Services.csproj" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.10" />
+
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8" />
   </ItemGroup>
+
 </Project>
