--- a/test/test.csproj
+++ b/test/test.csproj
@@ -23,7 +23,8 @@
   </ItemGroup>
 
 <ItemGroup>
-  <Compile Include="**\*.cs" />
+  <Compile Include="**\*.cs" 
+           Exclude="obj\**\*.cs;obj\Debug\net8.0\test.GlobalUsings.g.cs;obj\Debug\net8.0\.NETCoreApp,Version=v8.0.AssemblyAttributes.cs" />
 </ItemGroup>
 
   <ItemGroup>
